<resources>
    <string name="app_name">MoonbeanPocketApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Moonbean Pocket App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_creatures">Creatures</string>
    <string name="menu_spells">Spells</string>
    <string name="menu_equipment">Equipment</string>
    <string name="menu_gold_level">Gold and Level</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reef_shark">Reef Shark</string>
    <string name="dire_wolf">Dire Wolf</string>
    <string name="brown_bear">Brown Bear</string>
    <string name="giant_octopus">Giant Octopus</string>
</resources>
